[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name="pyvscode"
version="1.0.0"
authors = [{ name="KrazyManJ" }]
description="Package for interacting with IDE called Visual Studio Code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[project.urls]
"Repository" = "https://github.com/KrazyManJ/pyvscode"
"Bug Tracker" = "https://github.com/KrazyManJ/pyvscode/issues"