[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[project]
name = "pyvscode"
version = "2.2.1"
authors = [{ name = "KrazyManJ" }]
description = "Package for interacting with IDE called Visual Studio Code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "dataclasses",
    "subprocess"
]
[project.urls]
"Repository" = "https://github.com/KrazyManJ/pyvscode"
"Bug Tracker" = "https://github.com/KrazyManJ/pyvscode/issues"